<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Donate.Donate">
    <TextView
        android:id="@+id/donateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/left_right"
        android:layout_marginTop="@dimen/top_bottom"
        android:text="@string/donateTitle"
        android:textSize="@dimen/fontSize24"
        />

    <TextView
        android:id="@+id/donateSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/donateTitle"
        android:layout_alignEnd="@+id/donateTitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/left_right"
        android:layout_marginTop="@dimen/top_bottom"
        android:text="@string/donateSubtitle"
        />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/amountPicker"
        android:layout_below="@+id/donateSubtitle"
        android:layout_alignEnd="@+id/donateSubtitle"
        android:layout_marginEnd="@dimen/left_right"
        android:textSize="@dimen/fontSize20" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleHorizontal"
        android:id="@+id/progressBar"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/donateSubtitle"
        android:layout_above="@+id/amountValue"
        android:layout_marginEnd="@dimen/left_right"
        android:layout_marginStart="@dimen/left_right"
        android:layout_marginBottom="@dimen/top_bottom"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/amountText"
        android:text="@string/amountText"
        android:layout_marginStart="@dimen/left_right"
        android:layout_marginEnd="@dimen/left_right"
        android:layout_marginBottom="@dimen/valueWidth46"
        android:layout_above="@+id/LinerDonate"
        android:textSize="@dimen/fontSize20"
        />

    <EditText
        android:id="@+id/amountValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LinerDonate"
        android:layout_marginBottom="@dimen/top_bottom"
        android:layout_toEndOf="@+id/amountText"
        android:width="300dp"
        android:inputType="number"
        android:minHeight="@dimen/valueWidth48"
        android:hint="@string/defaultValue"
        android:defaultFocusHighlightEnabled="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LinerDonate"
        android:layout_above="@+id/email_fab"
        >
        <Button
            android:id="@+id/donateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donateButton"
            android:onClick="donateButtonPressed"
            android:layout_marginStart="@dimen/left_right"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalText"
            android:text="@string/totalText"
            android:layout_marginStart="@dimen/valueWidth48"
            android:textSize="@dimen/fontSize20"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalValue"
            android:text="@string/defaultValue"
            android:layout_marginStart="@dimen/left_right"
            android:textSize="@dimen/fontSize20"
            />
    </LinearLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/paymentMethod"
        android:layout_below="@+id/donateSubtitle"
        android:layout_alignEnd="@+id/donateSubtitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/left_right"
        android:layout_marginTop="@dimen/top_bottom"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paypal"
            android:id="@+id/PayPal"
            android:checked="false"
            android:textSize="@dimen/fontSize20"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direct"
            android:id="@+id/Direct"
            android:checked="false"
            android:textSize="@dimen/fontSize20"
            />
    </RadioGroup>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_fab"
        android:src="@drawable/email_icon"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/top_bottom"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/left_right"
        android:contentDescription="@string/fabText"
        android:onClick="fabClick"/>

</RelativeLayout>